fix: scroll button & overflow when menu is opened & styles for dark and white theme

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -16,7 +16,11 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: visible;
+}
+
+.app-container__overflow{
+  overflow: hidden;
 }
 
 .header-app,
