--- a/src/css/main/search.css
+++ b/src/css/main/search.css
@@ -20,7 +20,7 @@
   padding: 10px;
   font-size: 1rem;
   font-weight: 600;
-  background-color: #4b7bec;
+  background-color: #0078d7;
   color: #fff;
   border: none;
   border-radius: 5px;
